--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: antiquewhite;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -13,7 +14,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #1e1e1e, #2c3e50);
+    background: #a1822e;
+}
+.row{
+    background-color: #5189c4;
+    border-radius: 2vh;
 }
 
 .container {
@@ -21,39 +26,52 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
+background-color: #8e9dc5;
     height: 100%;
 }
+
 
 .calculator {
     width: 380px;
     padding: 30px;
     border-radius: 20px;
-    background: rgba(255, 255, 255, 0.1);
+    background-color: #c27b4c;
+    background: rgba(159, 39, 39, 0.1);
     backdrop-filter: blur(10px);
     box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.4);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 input {
     width: 100%;
-    height: 80px;
+    height: 88px;
+    color: #194d84;
     margin-bottom: 15px;
     padding: 10px;
     border: none;
     border-radius: 12px;
-    background: rgba(255, 255, 255, 0.1);
-    color: #fff;
+    background: rgba(241, 0, 0, 0.1);
+    color:rgb(215, 189, 189);
     font-size: 36px;
+    opacity: calc(#1e1e1e);
+
     text-align: right;
     box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.2);
     outline: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.input1{
+    background-color: #393b3e;
 }
 
-input::placeholder {
-    color: rgba(255, 255, 255, 0.6);
+.input::placeholder {
+    color: rgba(227, 216, 216, 0.6);
+font-family: Arial, Helvetica, sans-serif;
+animation: infinite;
 }
 
-button {
+
+.button {
     width: 70px;
     height: 70px;
     margin: 8px;
